# aquanova

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  check_hrro_graph.py  check_membrane_api.py  docker-compose.yml  license  package-lock.json  package.json  pre-commit-config.yaml  pyproject.toml  run_aquanova.ps1  stop_aquanova.ps1  verify_hrro_fix.py
alembic/: env.py
alembic/versions/: 5761d14f53f1_add_artifact_path_to_report_job.py  a601e86ae574_init.py
app/: cli.py  main.py
app/api/v1/: __init__.py  api.py  schemas.py
app/core/: config.py  errors.py  fs.py  logger.py
app/data/: membranes.py
app/db/: session.py
app/schemas/: common.py  membrane.py  report.py  simulation.py
app/services/: __init__.py  membranes.py  solver.py  tasks.py  transport.py  units.py  units_apply.py  units_apply_out.py  water_chemistry.py
app/workers/: report_worker.py
docker/: entrypoint.sh
docs/: requirements.md
docs/architecture/: 01-architecture-overview.md  02-repository-structure.md  03-Architecture.md
examples/: ccro_example.json  ro_minimal.json  ro_mvp_valid.json
scripts/: analyze_ps1_deps.py  aquanova_code_extract.txt  aquanova_dependencies.txt  debug_hrro_physics.py  extract_file_list.py  file_list.txt  test_hrro_debug.py  trace_hrro.py  tree.py  verify_110_bug.py  verify_chemistry.py  verify_feed_engine_e2e.py  verify_hrro_patch.py  verify_uf.py  verify_uf_engine.py
tests/: conftest.py  modules_test.py  test_api_simulation_reports.py  test_hrro_excel_fixture_contract.py  test_hrro_excel_golden_from_xlsx.py  test_hrro_excel_regression_cases.py  test_hrro_guidelines_match_xlsx.py  test_hrro_hrro_excel_sanity.py  test_simulations_run.py  test_total_e2e.py
tests/fixtures/: hrro_baseline.xlsx
ui/: index.html  package-lock.json  package.json  postcss.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
(+119 files in other folders)
