[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "aquanova"
version = "0.1.0"
description = "AquaNova: Modular water treatment process simulator (Wave Pro style)"
authors = [{ name = "Junwook Kim", email = "jwkim3089aw@aquaworks.kr" }]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "license" }
keywords = ["water", "RO", "simulator", "process", "desalination", "hrro"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Chemistry",
]

# [핵심] 시뮬레이터 구동에 필요한 모든 라이브러리를 통합했습니다.
dependencies = [
    # 1. Core & Math
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.11",          # 과학 계산 (필수)
    "numba>=0.59",          # 고성능 연산 (필수)

    # 2. Web Framework & API
    "fastapi>=0.115",       # 웹 서버 (필수)
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9", # 파일 업로드 등 처리에 필요
    "httpx>=0.27",          # 내부 HTTP 요청용

    # 3. Database & Cache
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "redis>=5.0",

    # 4. Utilities
    "typer>=0.12",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "rq>=1.15",             # 작업 큐
    "openpyxl>=3.1",        # 엑셀 파일 읽기/쓰기 (Wave 엑셀 로직 연동용)
    "reportlab>=3.9",       # PDF 리포트 생성
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "isort>=5.13"
]

[project.scripts]
aquanova = "app.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
markers = [
  "excel: Excel baseline / golden tests (requires xlsx fixture)",
  "e2e: End-to-end tests (disabled by default; run with --e2e)",
]